--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "personal_pic.png"
+  avatar           : "personal_pic_2025.png"
   name             : "Fuqin Zhou @NJIT"
   pronouns         : "She/Her/Hers"# example: "she/her"
   bio              : "A Ph.D Student"
@@ -33,17 +33,17 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : #"https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=XMqOMbAAAAAJ&hl=en&oi=ao"
   impactstory      : # URL
-  orcid            : #"http://orcid.org/yourorcidurl"
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=fuqin+zhou"
+  orcid            : "https://orcid.org/0009-0000-0342-0033"
+  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=fuqin+zhou"
   researchgate     : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "zhoufq001"
+  github           : # "zhoufq001"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
