--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Fuqin Zhou / Personal Website"
+title                    : "Fuqin Zhou / About Me"
 title_separator          : "-"
 name                     : &name "Fuqin Zhou"
 description              : &description "Fuqin is a Ph.D. candidate in the Business Data Science Program with B.S. in Financial Engineering. She has 4 year of industry experience in Bank finance.  She has 2 years of experience in areas spanning Supply Chain management, Economy, Finance and portfolio management. 
@@ -22,10 +22,10 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "personal_pic_2025.png"
+  avatar           : "personal_pic_202512.png"
   name             : "Fuqin Zhou @NJIT"
   pronouns         : "She/Her/Hers"# example: "she/her"
-  bio              : "A Ph.D Student"
+  bio              : "Ph.D Candidate in Business Data Science"
   location         : "Newark, NJ"
   employer         : "NJIT"
   uri              : # URL
@@ -65,7 +65,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : "Jean_YZZZZ"  # Replace this with your X / Twitter handle
+  twitter          : #"Jean_YZZZZ"  # Replace this with your X / Twitter handle
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
