--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,5 +18,9 @@ main:
   - title: "CV"
     url: /cv/
     
-#  - title: "Guide"
-#    url: /markdown/
+  - title: "Guide"
+    url: /markdown/
+
+  - title: "Test"
+    url: /test/
+
