--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
 #    url: /talks/
 
   - title: "Teaching"
-    url: /teaching/
+    url: /teaching2/
     
 #  - title: "Portfolio"
 #    url: /portfolio/
