--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Fuqin Zhou / About Me"
+title                    : "Fuqin Zhou / Home"
 title_separator          : "-"
 name                     : &name "Fuqin Zhou"
 description              : &description "Fuqin is a Ph.D. candidate in the Business Data Science Program with B.S. in Financial Engineering. She has 4 year of industry experience in Bank finance.  She has 2 years of experience in areas spanning Supply Chain management, Economy, Finance and portfolio management. 
